--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -11,4 +11,5 @@ wasm-bindgen = "0.2.83"
 wasm-bindgen-futures = "0.4.33"
 web-sys = "0.3.60"
 js-sys = "0.3.60"
-gloo-timers = "0.2.5"
+gloo-timers = { version = "0.2.5", features = ["futures"] }
+serde = "1.0.150"
